# GamepadCore_

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md
.github/workflows/: build.yml
App/: CMakeLists.txt  DualSenseMods.cpp
Examples/Adapters/O3DE/: DeviceRegistry.h.txt  o3deSystemComponent.cpp.txt  o3deSystemComponent.h.txt
Examples/Adapters/Tests/: test_device_registry_policy.h
Examples/Apps/: CMakeLists.txt  DualSenseMods.cpp  Logger.h
Examples/Gamings/: CMakeLists.txt  gaming-mods.cpp  gaming-mods.cpp.txt
Examples/Platform_Linux/: test_linux_device_info.cpp  test_linux_hardware_policy.h
Examples/Platform_Windows/: test_windows_device_info.cpp  test_windows_device_info.h
Examples/Platform_Windows/ViGEmAdapter/: ViGEmAdapter.cpp  ViGEmAdapter.h
Examples/Unreal/Engine/: DeviceRegistry.cpp  GamepadRegistryPolicy.h
Examples/Unreal/Platform_Linux/: CommonsDeviceInfo.h  LinuxHardwarePolicy.h
Source/: .clang-format  CMakeLists.txt
Source/Private/Core/Algorithms/: MadgwickAhrs.cpp
Source/Private/Core/Interfaces/: IPlatformHardwareInfo.cpp
Source/Private/GCore/Interfaces/: IPlatformHardwareInfo.cpp
Source/Private/GImplementations/Libraries/DualSense/: DualSenseLibrary.cpp
Source/Private/GImplementations/Libraries/DualShock/: DualShockLibrary.cpp
Source/Private/GImplementations/Utils/: GamepadOutput.cpp
Source/Private/GImplementations/Utils/MiniAudio/: miniaudio_impl.cpp
Source/Private/Implementations/Libraries/Base/: SonyGamepadAbstract.cpp
Source/Private/Implementations/Libraries/DualSense/: DualSenseLibrary.cpp
Source/Private/Implementations/Libraries/DualShock/: DualShockLibrary.cpp
Source/Private/Implementations/Utils/: GamepadOutput.cpp
Source/Public/Core/Algorithms/: MadgwickAhrs.h
Source/Public/Core/Interfaces/: IDeviceRegistry.h  IPlatformHardwareInfo.h  ISonyGamepad.h
Source/Public/Core/Interfaces/Segregations/: IGamepadAudioHaptics.h  IGamepadLightbar.h  IGamepadRumbles.h  IGamepadSensors.h  IGamepadStatus.h  IGamepadTouch.h  IGamepadTrigger.h
Source/Public/Core/Templates/: TBasicDeviceRegistry.h  TGenericHardwareInfo.h
Source/Public/Core/Types/: ECoreGamepad.h
Source/Public/Core/Types/Structs/Config/: GamepadAudio.h  GamepadFeature.h  GamepadLightbar.h  GamepadLigthbarFlash.h  GamepadPlayerLed.h  GamepadRumbles.h  GamepadSensors.h  GamepadTriggers.h  GamepadTriggersHaptic.h
Source/Public/Core/Types/Structs/Context/: DeviceContext.h  InputContext.h  OutputContext.h
Source/Public/GCore/Templates/: TBasicDeviceRegistry.h  TGenericHardwareInfo.h
Source/Public/GCore/Types/: ECoreGamepad.h
Source/Public/GCore/Types/Structs/Context/: DeviceContext.h  InputContext.h  OutputContext.h
Source/Public/GCore/Utils/: CR32.h
Source/Public/GImplementations/Libraries/Base/: SonyGamepadAbstract.h
Source/Public/GImplementations/Libraries/DualSense/: DualSenseLibrary.h
Source/Public/GImplementations/Utils/: GamepadInput.h  GamepadSensors.h  GamepadTouch.h
Source/Public/Implementations/Libraries/Base/: SonyGamepadAbstract.h
Source/Public/Implementations/Libraries/DualSense/: DualSenseLibrary.h
Source/Public/Implementations/Libraries/DualShock/: DualShockLibrary.h
Source/Public/Implementations/Utils/: GamepadInput.h  GamepadOutput.h  GamepadSensors.h  GamepadTouch.h  GamepadTrigger.h
Tests/Integration/: CMakeLists.txt  audio-haptics.test.cpp
Tests/Integration/Features/: adaptive-triggers.test.cpp  audio-haptics.test.cpp  gamepad-analog.test.cpp
Tests/Integration/Features/dll/: app-dll-scope-haptics.test.cpp  app-dll-scope-input.test.cpp
